#  Part of SkySQL Manager API
#
# This file is distributed as part of SkySQL Manager.  It is free
# software: you can redistribute it and/or modify it under the terms of the
# GNU General Public License as published by the Free Software Foundation,
# version 2.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with
# this program; if not, write to the Free Software Foundation, Inc., 51
# Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
#
# Copyright 2013 (c) SkySQL Ab
#
# Author: Massimo Siani
# Date: August 2013
#




CHANGELOG

* Thu Nov 19 2013 Massimo Siani <massimo.siani@skysql.com>
- Register Monitor version every 30 seconds
- Added machine-down state for Ping monitor
- Fixed locale on non-English machines

* Fri Nov 15 2013 Massimo Siani <massimo.siani@skysql.com>
- Added version registration in the API
- Include a modified mariadb java driver to avoid select commands on connect

* Tue Nov 12 2013 Massimo Siani <massimo.siani@skysql.com>
- Use show status instead of select

* Thu Nov 7 2013 Massimo Siani <massimo.siani@skysql.com>
- Split library

* Fri Nov 1 2013 Massimo Siani <massimo.siani@skysql.com>
- Fix compatibility with API R185

* Mon Oct 28 2013 Massimo Siani <massimo.siani@skysql.com>
- Limit the information request in the JSON

* Tue Oct 23 2013 Massimo Siani <massimo.siani@skysql.com>
- Fix bug after node removal

* Mon Oct 21 2013 Massimo Siani <massimo.siani@skysql.com>
- Double check private IP of the node before connecting.
- Throw a human readable message from JS monitor if the node is down.

* Fri Oct 18 2013 Massimo Siani <massimo.siani@skysql.com>
- Check for both hostname and IP in node cluster membership
